--- a/SeleniumCSTutorials/packages.config
+++ b/SeleniumCSTutorials/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="NUnit" version="3.12.0" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net46" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net46" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net46" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="94.0.4606.6100" targetFramework="net46" />
 </packages>
